logs/getdoi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/articleinfo'...
Listing './lib/python3.5/site-packages/articleinfo/getArticleInfoFromCitation'...
Listing './lib/python3.5/site-packages/articleinfo/tests'...
Listing './lib/python3.5/site-packages/articleinfo-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/getdoi'...
Listing './lib/python3.5/site-packages/getdoi/getArticleURL'...
Listing './lib/python3.5/site-packages/getdoi/getDOIFromURL'...
Listing './lib/python3.5/site-packages/getdoi/reader'...
Listing './lib/python3.5/site-packages/getdoi/scraping'...
Compiling './lib/python3.5/site-packages/getdoi/scraping/beautifulSoupModel.py'...
***   File "./lib/python3.5/site-packages/getdoi/scraping/beautifulSoupModel.py", line 117
    print(f'発見された単語({count}番目): {raw_text}')
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/getdoi/standAlone'...
Listing './lib/python3.5/site-packages/getdoi/tests'...
Listing './lib/python3.5/site-packages/getdoi/translator'...
Listing './lib/python3.5/site-packages/getdoi-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scripts'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
